tests/negative/gold/bad_literal6_test.gold
tests/negative/bad_literal6_test.toit:9:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/bad_literal6_test.toit:8:11: error: Class 'int' does not have any method '_123456'
  print 0._123456
          ^~~~~~~
Compilation failed.
